Task15 support for companies (#15)
* interface database and implementations changed to be generic

* CompanyService, CompanyApi and CompanyController added

* cleanup for checkstyle

* problem with controller tests

* problem with controller tests in FileBasedDatabase

* everything is broken ehhh

* fixed tests